# massload

./: .dockerignore  .gitignore  Cargo.toml  DEPLOY.md  README.md  docker-compose.yml
backend/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
backend/schemas/: midds-musical-work-flat.json  midds-musical-work-grouped.json  transformation-matrix-schema.json
backend/src/: error.rs  lib.rs  main.rs
backend/src/ai/: mod.rs  prompt.rs
backend/src/api/: logs.rs  mod.rs  server.rs  types.rs
backend/src/cache/: mod.rs
backend/src/models/: mod.rs
backend/src/parser/: mod.rs
backend/src/transform/: grouper.rs  mod.rs  pipeline.rs
backend/src/transform/dsl/: executor.rs  matrix.rs  mod.rs  operations.rs
backend/src/validation/: mod.rs
backend/tests/: Export SACEM - 1275912043 - 2025-06-26T09_37_05.672Z.csv  Export SACEM - BAGUETTE PUBLISHING - 2025-06-26T12_13_32.926Z.csv  format-accents.csv  format-alternative.csv  format-ascap-usa.csv  format-extended.csv  format-gema-germany.csv  format-prs-uk.csv  format-publishers.csv  format-sacem-real.csv  format-semicolon.csv  format-sgae-spain.csv  format-tab.tsv  format-types.csv  national-english.csv  national-french.csv  national-german.csv  national-italian.csv  national-japanese.csv  national-mixed-languages.csv  national-portuguese.csv  national-spanish.csv  test-all-3-ops.csv  test-bpm-key.csv  test-classical-full.csv  test-complete-midds.csv  test-concat-substring.csv  test-extreme-weird.csv  test-isni-codes.csv  test-join-operations.csv  test-minimal.csv  test-simple.csv  test-work-types.csv  test-worktype-simple.csv  test.csv  test_api.mjs
deploy/k8s/: backend-deployment.yaml  backend-service.yaml  configmap.yaml  frontend-deployment.yaml  frontend-service.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  secret.yaml
frontend/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  Trunk.toml  index.html  package.json
frontend/src/: config.rs  lib.rs  main.rs  types.rs
frontend/src/components/: footer.rs  header.rs  hero.rs  logs.rs  mod.rs  preview.rs  preview_detail.rs  progress.rs  upload.rs
frontend/src/js/: blockchain.js  wallet.js
frontend/src/services/: blockchain.rs  mod.rs  upload.rs  wallet.rs
frontend/style/: accordion.css  main.css
